# claude-widget-viewer

./: Cargo.toml  README.md  README.zh-CN.md  install.ps1  test-widget.html
assets/: design-system.css
claude/: SKILL.md  widget-protocol.md
hook/: post-write-widget.sh  widget-daemon-start.sh
src/: ipc.rs  main.rs  protocol.rs  shell.rs  viewer.rs  watcher.rs
tests/: integration.rs
